# youtube-dl-nas

./: .dockerignore  .env.example  .gitignore  Auth.json  CHANGELOG.md  CONTRIBUTING.md  DISCLAIMER.md  DOCKERHUB.md  Dockerfile  LICENSE  QUEUE.md  README.md  SECURITY.md  compose.yaml  init_update.txt  requirements-dev.txt  requirements.txt  run.sh  subber  upd_schedule.py  youtube-dl-server.py
.github/: FUNDING.yml  pull_request_template.md
.history/: .gitignore_20260322152332  .gitignore_20260322163039  .gitignore_20260322163108  .gitignore_20260322163109  .gitignore_20260322163121  .gitignore_20260322163128  .gitignore_20260322163142  .gitignore_20260322163143  .gitignore_20260322163153  .gitignore_20260322163204  .gitignore_20260322163219  (+4 more)
backend/: alembic.ini  pyproject.toml  requirements.txt
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: a3cdd2c11b07_initial_schema_downloads_only.py
backend/app/: __init__.py  config.py  database.py  dependencies.py  main.py
backend/app/models/: __init__.py  user.py
backend/app/routers/: __init__.py  auth.py  download.py  files.py  health.py  legacy.py
backend/app/schemas/: __init__.py  auth.py  common.py  download.py  legacy.py
backend/app/services/: auth_service.py  download_manager.py  scheduler.py  ytdlp_service.py
backend/app/ws/: handler.py  manager.py
backend/tests/: conftest.py  test_auth.py  test_download.py  test_error_handling.py  test_files.py  test_health.py  test_legacy.py  test_websocket.py
backend/youtube_dl_nas_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
(+83 files in other folders)
